static/home/css/main.css
@import url('https://fonts.googleapis.com/css2?family=Lovers+Quarrel&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;1,300;1,400;1,700&display=swap');


/* Initial page settings */

* {
    margin: 0;
    padding: 0;
    border: none;
    box-sizing: border-box;
}

body {
    font-family: 'Lato', sans-serif;
    height: 100vh;
    width: 100vw;
    display: flex;
    flex-direction: column;
    overflow: hidden;
}

/* headings and logo */

a {
    text-decoration: none !important;
}

#logo {
    font-family: 'Lovers Quarrel', cursive;
    font-size: 300%;
    color: #FFCCCC;
    margin-left: 3rem;
    position: relative;
}

#logo:hover {
    color: #c31aad;
}

.basic-wrapper {
    width: 90%;
    max-width: 600px;
    margin: 5em auto;
}

/*Navbar section*/

header {
    background-color: #590c8d;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
}

nav {
    margin-right: 3rem;
}

.nav-item {
    text-transform: uppercase;
}

/* landing page */

#row {
    --bs-gutter-y: 0;
    display: flex;
    flex-wrap: wrap;
    margin-top: calc(-1 * var(--bs-gutter-y));
    margin-right: calc(-.5 * var(--bs-gutter-x));
    margin-left: calc(-.5 * var(--bs-gutter-x));
}

#body-image {
    height: 100vh;
    width: 100vw;
    background: linear-gradient(rgba(0, 0, 255, 0.5), rgba(255, 255, 0, 0.5)), url("../img/heart1.jpg") no-repeat center center;
    background-size: cover;
    position: absolute;
}

/*sign up heart*/

#signup {
    margin-top: 15em;
    color: #590c8d;
    font-size: x-large;
}

#below_heart {
    color: #42193d;
    font-size: 30px;
    font-weight: 600;
    margin-right: 10px;
}

.fa-heart {
    border-radius: 20px;
    border-style: solid;
    border-width: 1px;
    display: block;
    width: 100px;
    height: 100px;
    font-size: 90px;
    transition: width 2s, height 2s, background-color 2s, transform 2s;
    color: #42193d;
    padding-top: 5px;
}

.fa-heart:hover {
    padding-top: 50px;
    font-size: 100px;
    color: #c31aad;
    background-color: #FFCCCC;
    width: 200px;
    height: 200px;
    transform: rotate(360deg);
}

/*footer section*/

footer {
    position: relative;
}

.social-links {
    margin-top: 20px;
}

.social-links li a i {
    background-color: #42193d;
    height: 50px;
    width: 50px;
    color: #fff;
    font-size: 30px;
    padding: 10px;
    border-radius: 20%;
}

.social-links li a i:hover {
    background: #FFCCCC;
    color: #c31aad;
}

input.input-box{
width:75%;
}

textarea.input-box.input-lg{
    width:75%;
    }
/* Media Queries */

@media screen and (max-width: 500px) {
    header {
        flex-direction: column;
        align-items: flex-start;
    }

}

@media screen and (max-width: 360px) {
    #logo {
        font-size: 250%;
    }
}

